--- a/welcome.html
+++ b/welcome.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>JsWeather - A little Javascript Weather App</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hey guys</h1>
+    <h1>Hey girls</h1>
   </body>
 </html>
