--- a/welcome.html
+++ b/welcome.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hey girls</h1>
+
+    <div class="wrap">
+      <div class="background-image"></div>
+      <div class="content">
+        <p>La météo</p>
+        <input type="button" value="Voir la météo">
+      </div>
+    </div>
+
   </body>
 </html>
