Welcome page Ok ! All elements centered, going to start some animations

--- a/welcome.html
+++ b/welcome.html
@@ -10,8 +10,8 @@
     <div class="wrap">
       <div class="background-image"></div>
       <div class="content">
-        <p>La météo</p>
-        <input type="button" value="Voir la météo">
+        <p id="content-title">JsWeather - A good weather application.</p>
+        <button id="lookfor-btn" type="button">Look for weather</button>
       </div>
     </div>
 
