Adding new style for Looking for btn and new screen landing page for index.html

--- a/welcome.html
+++ b/welcome.html
@@ -8,7 +8,7 @@
   <body>
 
     <div class="wrap">
-      <div class="background-image"></div>
+      <div id="welcome" class="background-image"></div>
       <div class="content">
         <p id="content-title">JsWeather - A good weather application.</p>
         <button id="lookfor-btn" type="button">Look for weather</button>
