--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>JsWeather - A little Javascript Weather App</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Hey guys</h1>
+
+    <div class="weather-container">
+      <div id="index" class="background-image"></div>
+      <div class="content">
+
+      </div>
+    </div>
+
+    <script type="text/javascript" src="style.js"></script>
   </body>
 </html>
