Index Page created and it dislays some weather information

--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
     <div class="wrap">
       <div id="welcome" class="background-image"></div>
       <div class="content">
-        <p id="content-title">JsWeather - A good weather application.</p>
+        <p id="content-title">JsWeather - A JavaScript weather application.</p>
         <button id="lookfor-btn" type="button">Look for weather</button>
       </div>
     </div>
