--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   </head>
   <body>
 
-    <div class="weather-container">
+    <div class="weather-wrap">
       <div id="index" class="background-image"></div>
       <div class="content">
-
+        <h1 id="city"></h1>
+        <h2 id="temperature"></h2>
+        <p id="description"></p>
+        <div class="box"></div>
       </div>
     </div>
 
-    <script type="text/javascript" src="style.js"></script>
+    <script type="text/javascript" src="weather.js"></script>
   </body>
 </html>
