--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div id="index" class="background-image"></div>
       <div class="content">
         <h1 id="city"></h1>
-        <h2 id="temperature"></h2>
+        <p id="temperature"></p>
+        <p id="temperature-details"></p>
+        <p id="wind"></h2>
         <p id="description"></p>
         <div class="box"></div>
       </div>
