redisigning weather result display

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p id="temperature-details"></p>
         <p id="wind"></h2>
         <p id="description"></p>
+        <img id="weather-icon" src="" alt="weather icon state">
         <div class="box"></div>
       </div>
     </div>
