Geolocation ok, so weather is now depending on user's localization if he accepted that

--- a/index.html
+++ b/index.html
@@ -10,16 +10,39 @@
     <div class="weather-wrap">
       <div id="index" class="background-image"></div>
       <div class="content">
-        <h1 id="city"></h1>
-        <p id="temperature"></p>
-        <p id="temperature-details"></p>
-        <p id="wind"></h2>
-        <p id="description"></p>
-        <img id="weather-icon" src="" alt="weather icon state">
+
+        <div id="city">
+          <i class="fa fa-location-arrow" aria-hidden="true"></i>
+          <span></span>
+        </div>
+
+        <div id="temperature">
+          <i class="fa fa-thermometer-three-quarters" aria-hidden="true"></i>
+          <span></span>
+        </div>
+
+        <div id="temperature-details">
+          <i class="fa fa-tint" aria-hidden="true"></i>
+          <span></span>
+        </div>
+
+        <div id="wind">
+          <i class="fa fa-ravelry" aria-hidden="true"></i>
+          <span></span>
+        </div>
+
+        <div id="description">
+          <!-- <i class="fa fa-location-arrow" aria-hidden="true"></i> -->
+          <img id="weather-icon" src="" alt="weather icon state">
+          <span></span>
+        </div>
+
+
         <div class="box"></div>
       </div>
     </div>
 
+    <script src="https://use.fontawesome.com/77f40a0fb5.js"></script>
     <script type="text/javascript" src="weather.js"></script>
   </body>
 </html>
