adding image to README file

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         </div>
 
         <div id="description">
-          <!-- <i class="fa fa-location-arrow" aria-hidden="true"></i> -->
-          <img id="weather-icon" src="" alt="weather icon state">
+          <img id="weather-icon" src="" alt="">
           <span></span>
         </div>
 
