Renaming welcome.htmlm to index.html and index.html (weather display) to weather.html

--- a/index.html
+++ b/index.html
@@ -7,41 +7,14 @@
   </head>
   <body>
 
-    <div class="weather-wrap">
-      <div id="index" class="background-image"></div>
+    <div class="wrap">
+      <div id="welcome" class="background-image"></div>
       <div class="content">
-
-        <div id="city">
-          <i class="fa fa-location-arrow" aria-hidden="true"></i>
-          <span></span>
-        </div>
-
-        <div id="temperature">
-          <i class="fa fa-thermometer-three-quarters" aria-hidden="true"></i>
-          <span></span>
-        </div>
-
-        <div id="temperature-details">
-          <i class="fa fa-tint" aria-hidden="true"></i>
-          <span></span>
-        </div>
-
-        <div id="wind">
-          <i class="fa fa-ravelry" aria-hidden="true"></i>
-          <span></span>
-        </div>
-
-        <div id="description">
-          <img id="weather-icon" src="" alt="">
-          <span></span>
-        </div>
-
-
-        <div class="box"></div>
+        <p id="content-title">JsWeather - A JavaScript weather application.</p>
+        <button id="lookfor-btn" type="button">Look for weather</button>
       </div>
     </div>
 
-    <script src="https://use.fontawesome.com/77f40a0fb5.js"></script>
-    <script type="text/javascript" src="weather.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
